2022-10-13T08:34:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3240862073 # 516
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 353 552 / 374 583
* notice: next accum: outdated-unq outdated-all / unq all: 353 552 / 375 584
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-13]

2022-10-13T02:32:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3239273076 # 515
* notice: last 14d: unq all: 11 31
* notice: prev accum: outdated-unq outdated-all / unq all: 351 548 / 373 580
* notice: next accum: outdated-unq outdated-all / unq all: 353 552 / 374 583
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +7 +10 -0 -0 / 7 10
* notice: removed / changed dates: [2022-09-28] / [2022-09-29 2022-10-12]

2022-10-12T16:48:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3236429718 # 514
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 351 548 / 373 581
* notice: next accum: outdated-unq outdated-all / unq all: 351 548 / 373 580
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +4 -1 -3 / 1 1
* notice: removed / changed dates: [] / [2022-09-28]

2022-10-12T08:33:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3233205203 # 513
* notice: last 14d: unq all: 11 33
* notice: prev accum: outdated-unq outdated-all / unq all: 351 548 / 367 574
* notice: next accum: outdated-unq outdated-all / unq all: 351 548 / 373 581
* notice: prev exec diff / last date diff / accum: unq all: +7 +9 -1 -2 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [] / [2022-09-28 2022-10-12]

2022-10-12T02:39:42Z: