@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-13T08:34:45Z",
-  "count_outdated" : 552,
-  "uniques_outdated" : 353,
-  "count" : 584,
+  "timestamp" : "2022-10-13T16:40:00Z",
+  "count_outdated" : 554,
+  "uniques_outdated" : 354,
+  "count" : 586,
   "uniques" : 375,
   "clones" : [
-    {
-      "timestamp": "2022-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 3,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
