@@ -3,11 +3,6 @@
   "uniques": 11,
   "clones": [
     {
-      "timestamp": "2022-09-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -59,7 +54,7 @@
     },
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
