@@ -1,3 +1,11 @@
+2022-10-13T16:40:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3244127627 # 517
+* notice: last 14d: unq all: 11 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 353 552 / 375 584
+* notice: next accum: outdated-unq outdated-all / unq all: 354 554 / 375 586
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-29] / [2022-10-13]
+
 2022-10-13T08:34:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3240862073 # 516
 * notice: last 14d: unq all: 11 32
